--- a/src/client/Client.Infrastucture/Client.Infrastucture.csproj
+++ b/src/client/Client.Infrastucture/Client.Infrastucture.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>Client.App.Infrastructure</AssemblyName>
-    <RootNamespace>Client.App.Infrastructure</RootNamespace>
+    <AssemblyName>Client.Infrastructure</AssemblyName>
+    <RootNamespace>Client.Infrastructure</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,15 +11,10 @@
     <PackageReference Include="MimeMapping" Version="1.0.1.37" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.0" />
     <PackageReference Include="MudBlazor" Version="6.0.7" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
     <PackageReference Include="Toolbelt.Blazor.HttpClientInterceptor" Version="9.2.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Client.Infrastructure\Client.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
