--- a/src/client/Client/Client.csproj
+++ b/src/client/Client/Client.csproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 		<PackageReference Include="Blazored.FluentValidation" Version="2.0.1" />
 		<PackageReference Include="Humanizer" Version="2.14.1" />
+		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.4.0" />
 		<PackageReference Include="MudBlazor" Version="6.0.7" />
 		<PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
 	</ItemGroup>
