--- a/src/client/Client/Client.csproj
+++ b/src/client/Client/Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -10,7 +10,8 @@
 		<PackageReference Include="Humanizer" Version="2.14.1" />
 		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.4.0" />
 		<PackageReference Include="MudBlazor" Version="6.0.7" />
-		<PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
+		<PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
+		<PackageReference Include="Neo.Network.RPC.RpcClient" Version="3.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
