--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -10,5 +10,9 @@
     "SignalR": {
       "Enabled": "true"
     }
+  },
+  "NEO": {
+    "RpcUrl": "http://seed1t4.neo.org:20332",
+    "ProtocolSettingsConfigFile": "config.json"
   }
 }
