Added Asset  Wallet Manager

--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -13,6 +13,7 @@
   },
   "NEO": {
     "RpcUrl": "http://seed1t4.neo.org:20332",
-    "ProtocolSettingsConfigFile": "config.json"
+    "ProtocolSettingsConfigFile": "config.json",
+    "PlatformTokenHash": "0xbe4921737652e2408c63983ab812ef97b68c5c01"
   }
 }
