--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -14,6 +14,6 @@
   "NEO": {
     "RpcUrl": "http://seed1t4.neo.org:20332",
     "ProtocolSettingsConfigFile": "config.json",
-    "PlatformTokenHash": "0xbe4921737652e2408c63983ab812ef97b68c5c01"
+    "PlatformTokenHash": "0x289995cee082aa17259aa16ec8af7a6509c5d61d",
   }
 }
