--- a/src/client/Client/Client.csproj
+++ b/src/client/Client/Client.csproj
@@ -23,4 +23,8 @@
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	  </Content>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Pages\Locks\" />
+	</ItemGroup>
 </Project>
