Added Locks Pages and Update Asset Page

--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -14,6 +14,6 @@
   "NEO": {
     "RpcUrl": "http://seed1t4.neo.org:20332",
     "ProtocolSettingsConfigFile": "config.json",
-    "PlatformTokenHash": "0x289995cee082aa17259aa16ec8af7a6509c5d61d",
+    "PlatformTokenHash": "0x4a0a0acf325f5dfc199c0f320b7a0a2ecc5832df"
   }
 }
