Change Wallet Connect Implementation

--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -12,8 +12,9 @@
     }
   },
   "NEO": {
+    "Network": "TESTNET",
     "RpcUrl": "http://seed1t4.neo.org:20332",
     "ProtocolSettingsConfigFile": "config.json",
-    "PlatformTokenHash": "0x4a0a0acf325f5dfc199c0f320b7a0a2ecc5832df"
+    "PlatformTokenHash": "0x21c7acc6d2e318ed2bd6f8d42cfb4714c4ea6645"
   }
 }
