--- a/src/client/Client/Client.csproj
+++ b/src/client/Client/Client.csproj
@@ -19,6 +19,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Update="Pages\Modals\BuyPlatformTokenModal.razor">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	  </Content>
 	  <Content Update="Shared\MainLayout.razor">
 	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
 	  </Content>
