--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -15,6 +15,7 @@
     "Network": "TESTNET",
     "RpcUrl": "http://seed1t4.neo.org:20332",
     "ProtocolSettingsConfigFile": "config.json",
-    "PlatformTokenHash": "0xb9c2c7f906c66d5b9a27597a7168ccb0fe8c2442"
+    "PlatformTokenHash": "0xb9c2c7f906c66d5b9a27597a7168ccb0fe8c2442",
+    "LockTokenVaultContractHash": "0x4ce7e4ea2560672f0997e1e878d02647bb6ad9c0"
   }
 }
