--- a/src/client/Client/appsettings.json
+++ b/src/client/Client/appsettings.json
@@ -16,6 +16,7 @@
     "RpcUrl": "http://seed1t4.neo.org:20332",
     "ProtocolSettingsConfigFile": "config.json",
     "PlatformTokenHash": "0xb9c2c7f906c66d5b9a27597a7168ccb0fe8c2442",
-    "LockTokenVaultContractHash": "0xc818c118550a3d9c7d282b31e2f4c11b742bbfb4"
+    "LockTokenVaultContractHash": "0xd3112eff4bfa894631c7d22477dfb0bafa58acec",
+    "VestingTokenVaultContractHash": "0xd3634891b8b3a0c2611964b70d792a7503b2579b"
   }
 }
