--- a/src/contracts/LatchBoxToken/src/LatchBoxToken.csproj
+++ b/src/contracts/LatchBoxToken/src/LatchBoxToken.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>LockGemToken</RootNamespace>
+    <RootNamespace>LatchBoxToken</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
